--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
         <div class="py-5">
             <h1 class="text-4xl font-bold">Setiawan Jodi</h1>
-            <p class="">Fullstack Developer</p>
+            <p class="">Fullstack Developer test</p>
         </div>
     </div>
 </body>
